<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/foodName"
        style="@style/GreenInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="15" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/quantity"
        style="@style/GreenInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etQuantityInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="28" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calorieInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/calorie"
        style="@style/GreenInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCalorieInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proteinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:hint="@string/protein"
        style="@style/GreenInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etProteinInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:maxLength="5" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/brandInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand"
        style="@style/GreenInputText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBrandInput"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLength="32" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/btnOk"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_ok"
            />
        <Button
            android:id="@+id/btnCancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_cancel"
            />
    </LinearLayout>
</LinearLayout>