<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/calorieTitle"
        android:text="@string/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textColor="@color/black"
        android:textSize="34sp"
        />
    <TextView
        android:id="@+id/calorieValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calorieTitle"

        android:textColor="@color/gray"
        android:textSize="17sp"
        />

    <hu.bme.aut.android.tesislifebuddy.view.BarView
        android:id="@+id/calorieBar"
        android:layout_width="250dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calorieValue"
        />

    <TextView
        android:id="@+id/proteinTitle"
        android:text="@string/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calorieBar"

        android:textColor="@color/black"
        android:textSize="34sp"
        />
    <TextView
        android:id="@+id/proteinValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinTitle"

        android:textColor="@color/gray"
        android:textSize="17sp"
        />

    <hu.bme.aut.android.tesislifebuddy.view.BarView
        android:id="@+id/proteinBar"
        android:layout_width="250dp"
        android:layout_height="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinValue"
        />

    <Button
        android:id="@+id/btnNull"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/null_button"
        />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnNull"
        android:text="@string/food_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>